--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,11 +7,11 @@
     <style>
         body {
             text-align: center;
-            background-color: #f9d5b5; /* Vintage background color */
+            background-color: #f9d5b5; 
         }
 
         header {
-            background-color: #c9a798; /* Header background color */
+            background-color: #c9a798; 
             padding: 10px;
         }
 
@@ -35,7 +35,7 @@
         }
 
         footer {
-            background-color: #c9a798; /* Footer background color */
+            background-color: #c9a798; 
             padding: 10px;
         }
 
