--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -76,7 +76,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! My name is Jerry Boy C. Amada and Welcome to my page, Feel free to browse my works.</p>
+        <p>I am Jerry Boy C. Amada, currently a second-year student at Quezon City University pursuing a Bachelor's degree in Information Technology.</p>
     </section>
 
 
